# python-best-practices

./: LICENSE  README.md  pyproject.toml
.github/workflow/: ci.yml
guide/: step-by-step.md
lundpy/: __init__.py  app.py
solutions/add_logger/: app.py
solutions/add_pydantic/: app.py
solutions/better_greeting/: app.py
solutions/cd_pipeline/: cd.yml
solutions/ci_pipeline/: ci.yml
solutions/conflict1/: app.py
solutions/conflict2/: app.py
solutions/last_app/: app.py
solutions/new_tests/: no_test_app.py
solutions/random_greeting/: app.py
solutions/typehints/: app.py
solutions/updated_quotes/: app.py
tests/: test_app.py
